# mdm

./: .env  Release Notes.md  a.csv  ado-ci.ini  pyproject.toml  setup.py  sonar-project.properties
config/: adl-business-gbl-cf-customer-mdm.tf  adl-enriched-gbl-cf-customer-mdm-dnb.tf  adl-enriched-gbl-cf-customer-mdm-out-hco-addr-api.tf  adl-enriched-gbl-cf-customer-mdm-out-hco-api.tf  adl-enriched-gbl-cf-customer-mdm-out-hcp-addr-api.tf  adl-enriched-gbl-cf-customer-mdm-out-hcp-api.tf  adl-enriched-gbl-cf-customer-mdm-sap-hco-api.tf  adl-enriched-gbl-cf-customer-mdm-sap-hco.tf  adl-enriched-gbl-cf-customer-mdm-sap-hcp-api.tf  adl-enriched-gbl-cf-customer-mdm-sap-hcp.tf  adl-enriched-gbl-cf-customer-mdm-sfdc-hco-api.tf  adl-enriched-gbl-cf-customer-mdm-sfdc-hco.tf  adl-enriched-gbl-cf-customer-mdm-sfdc-hcp-api.tf  adl-enriched-gbl-cf-customer-mdm-sfdc-hcp.tf  adl-enriched-gbl-cf-customer-mdm-sfdc.tf  adl-enriched-gbl-cf-customer-mdm.tf  adl-landing-gbl-cf-customer-mdm.tf  adl-raw-gbl-cf-customer-mdm-dnb.tf  adl-raw-gbl-cf-customer-mdm-sfdc.tf  adl-raw-gbl-cf-customer-mdm.tf  adl-trusted-gbl-cf-customer-mdm-dnb.tf  adl-trusted-gbl-cf-customer-mdm-sfdc.tf  adl-trusted-gbl-cf-customer-mdm.tf
metadata/: config.yaml  config_dev.json  config_dev.yaml
src/helpers/: args.py  data.py  dataclass.py  dataclass_bkup.py  logger.py  mock_s3.py  utils.py
src/ingestion/: api_sap_hcp.py  enr_dnb_hco.py  enr_sap_hco.py  enr_sfdc_hcp.py  out_api_hco_address.py  out_api_hcp.py  raw_dnb_hco.py  raw_sap_hcp_hco.py  raw_sfdc_hco_hcp.py  tst_dnb_hco.py  (+2 more)
tests/: test_s3_uri_parser.py
(+12 files in other folders)
